# FileSequencePlayer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Doxyfile.in  file_sequence_finder.cpp  file_sequence_finder.h  file_sequence_finder_boost.cpp  file_sequence_finder_boost.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  main_window_controller.cpp  main_window_controller.h
test/: CMakeLists.txt  file_sequence_finder_boost_test.cpp  test_data.h.in
